[gd_scene load_steps=5 format=3 uid="uid://7nf8fbsxbiyy"]

[ext_resource type="Script" path="res://scripts/HUD.gd" id="1_tfdh6"]
[ext_resource type="FontFile" uid="uid://b5ftjs8qctuy1" path="res://art/Micro5-Regular.ttf" id="2_xb2nt"]
[ext_resource type="PackedScene" uid="uid://b0dwf6uc6guji" path="res://scenes/Controls.tscn" id="3_cnh8n"]
[ext_resource type="PackedScene" uid="uid://cj7ey0p176xwu" path="res://scenes/Credits.tscn" id="4_r4v1a"]

[node name="Hud" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_tfdh6")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.0
offset_right = 22.0
offset_bottom = 65.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_xb2nt")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
uppercase = true

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.5
offset_top = -113.0
offset_right = 86.5
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_xb2nt")
theme_override_font_sizes/font_size = 64
text = "MESSAGE"

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -139.0
offset_top = -217.0
offset_right = 139.0
offset_bottom = -144.0
grow_horizontal = 2
grow_vertical = 0
focus_neighbor_left = NodePath("../ControlsButton")
focus_neighbor_top = NodePath("../ControlsButton")
focus_neighbor_right = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../ControlsButton")
theme_override_fonts/font = ExtResource("2_xb2nt")
theme_override_font_sizes/font_size = 64
text = "PLAY"
metadata/_edit_use_anchors_ = true

[node name="SubMessage" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -73.5
offset_top = -40.0
offset_right = 73.5
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_xb2nt")
theme_override_font_sizes/font_size = 36
text = "sub message"
horizontal_alignment = 1

[node name="TimeMessage" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -73.5
offset_top = 9.0
offset_right = 73.5
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_xb2nt")
theme_override_font_sizes/font_size = 36
text = "time: "
horizontal_alignment = 1

[node name="ResetButton" type="Button" parent="."]
process_mode = 2
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -92.5
offset_top = -170.0
offset_right = 92.5
offset_bottom = -101.0
grow_horizontal = 2
grow_vertical = 0
focus_neighbor_left = NodePath("../QuitButton2")
focus_neighbor_top = NodePath("../QuitButton2")
focus_neighbor_right = NodePath("../QuitButton2")
focus_neighbor_bottom = NodePath("../QuitButton2")
focus_next = NodePath("../QuitButton2")
focus_previous = NodePath("../QuitButton2")
theme_override_fonts/font = ExtResource("2_xb2nt")
theme_override_font_sizes/font_size = 38
text = "RESTART?"

[node name="ControlsButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.0
offset_top = 55.0
offset_right = 72.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_left = NodePath("../QuitButton")
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_right = NodePath("../StartButton")
focus_neighbor_bottom = NodePath("../StartButton")
focus_next = NodePath("../StartButton")
focus_previous = NodePath("../QuitButton")
theme_override_fonts/font = ExtResource("2_xb2nt")
theme_override_font_sizes/font_size = 36
text = "CONTROLS"

[node name="Controls" parent="." instance=ExtResource("3_cnh8n")]

[node name="QuitButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -70.0
offset_top = -70.0
offset_right = 73.0
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 0
focus_neighbor_left = NodePath("../StartButton")
focus_neighbor_top = NodePath("../StartButton")
focus_neighbor_right = NodePath("../ControlsButton")
focus_neighbor_bottom = NodePath("../ControlsButton")
focus_next = NodePath("../ControlsButton")
focus_previous = NodePath("../StartButton")
theme_override_fonts/font = ExtResource("2_xb2nt")
theme_override_font_sizes/font_size = 30
text = "QUIT"

[node name="QuitButton2" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -70.0
offset_top = -70.0
offset_right = 73.0
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 0
focus_neighbor_left = NodePath("../ResetButton")
focus_neighbor_top = NodePath("../ResetButton")
focus_neighbor_right = NodePath("../ResetButton")
focus_neighbor_bottom = NodePath("../ResetButton")
focus_next = NodePath("../ResetButton")
focus_previous = NodePath("../ResetButton")
theme_override_fonts/font = ExtResource("2_xb2nt")
theme_override_font_sizes/font_size = 30
text = "QUIT"

[node name="Credits" parent="." instance=ExtResource("4_r4v1a")]

[node name="CreditsButton" type="Button" parent="."]
offset_left = 976.0
offset_top = 583.0
offset_right = 1108.0
offset_bottom = 634.0
theme_override_fonts/font = ExtResource("2_xb2nt")
theme_override_font_sizes/font_size = 30
text = "CREDITS"

[connection signal="pressed" from="StartButton" to="." method="_on_start_buton_pressed"]
[connection signal="pressed" from="ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="return_button" from="Controls" to="." method="_on_controls_return_button"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="QuitButton2" to="." method="_on_quit_button_pressed"]
[connection signal="return_button" from="Credits" to="." method="_on_controls_return_button"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_button_pressed"]
